--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Build
         run: |
           cmake -S . -B ./build -DCMAKE_BUILD_TYPE:STRING=Release
           cmake --build ./build --config Release --target strip
       - name: Release the new binary
         if: github.ref == 'refs/heads/main'
-        uses: mini-bomba/create-github-release@v1.1.3
+        uses: softprops/action-gh-release@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: "latest"
+          tag_name: "latest"
           prerelease: true
           name: "Latest commit that compiles"
           body: |
@@ -28,4 +28,3 @@ jobs:
             Commit message:
             ${{ github.event.head_commit.message }}
           files: build/strip
-          clear_attachments: true
