--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
       - main
   pull_request:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,13 +20,10 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: gh release delete latest --cleanup-tag || git push --delete origin latest
         continue-on-error: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release the new binary
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: "latest"
           prerelease: true
           name: "Latest commit that compiles"
